--- a/MoneyM/Storyboards/Settings.storyboard
+++ b/MoneyM/Storyboards/Settings.storyboard
@@ -9,68 +9,132 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Settings-->
-        <scene sceneID="s0d-6b-0kx">
+        <!--View Controller-->
+        <scene sceneID="qH8-7J-Ns2">
             <objects>
-                <viewController storyboardIdentifier="Settings" id="Y6W-OH-hqX" customClass="SettingsViewController" customModule="MoneyM" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FJA-dd-RUO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="pxf-HP-NIN" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="y2Z-k1-CVx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dj3-TO-VrF">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="6yi-gS-yfj">
-                                        <rect key="frame" x="16" y="55.5" width="343" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6yi-gS-yfj" id="ssY-Yg-lQC">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nu8-rk-MQd">
+                                <rect key="frame" x="171" y="378" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="dj3-TO-VrF" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="0Mr-A5-tsM"/>
-                            <constraint firstItem="dj3-TO-VrF" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="6qb-q8-24v"/>
-                            <constraint firstItem="dj3-TO-VrF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="CX0-sk-7Rg"/>
-                            <constraint firstItem="dj3-TO-VrF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="cQd-YP-Lcw"/>
-                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hdi-Nm-gfv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Settings" id="Sp8-AP-Iwb"/>
-                    <connections>
-                        <outlet property="settingsTableView" destination="dj3-TO-VrF" id="vC5-jo-Swa"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="994.39999999999998" y="3.1484257871064472"/>
+            <point key="canvasLocation" x="1019" y="1318"/>
+        </scene>
+        <!--Currency-->
+        <scene sceneID="G5N-Ue-9cm">
+            <objects>
+                <viewController storyboardIdentifier="Currency" title="Currency" id="RGl-ko-CjF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yNV-dV-5MR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Currency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1g7-OH-zxN">
+                                <rect key="frame" x="166" y="323" width="70" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="sgY-b8-r3G"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DdH-zg-uz4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="345" y="2047"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="asZ-rM-05e">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="58R-aE-WEh" customClass="SettingsMasterViewController" customModule="MoneyM" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="vo9-WV-tPI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="kYq-EP-Bnv">
+                                <rect key="frame" x="16" y="55.5" width="343" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kYq-EP-Bnv" id="y7W-5e-aJF">
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="58R-aE-WEh" id="Ax0-Ih-w61"/>
+                            <outlet property="delegate" destination="58R-aE-WEh" id="uBX-Io-b96"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Settings" id="VzA-Hf-J7J">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="bb6-hD-q7U">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="4T1-Ou-bKA">
+                                <rect key="frame" x="266" y="4.5" width="93" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelButtonClicked:" destination="NSZ-7Z-XMb" eventType="touchUpInside" id="POg-r1-nPf"/>
+                                    <action selector="cancelButtonClicked:" destination="58R-aE-WEh" eventType="touchUpInside" id="eNw-06-fOS"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ygt-Xy-Ln9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="NSZ-7Z-XMb" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1737" y="638"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="V4Z-od-Vzo">
+        <scene sceneID="XOD-41-MIt">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Y0g-1R-e3x" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qzJ-lX-dRZ">
+                <navigationController id="sK4-Pq-tw6" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WTz-p6-eU1">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
-                    <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="Yer-4q-tY0"/>
+                        <segue destination="58R-aE-WEh" kind="relationship" relationship="rootViewController" id="dMc-Rs-ntc"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yb2-uq-24X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tQZ-ej-97O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="55.200000000000003" y="3.1484257871064472"/>
+            <point key="canvasLocation" x="1019" y="638"/>
+        </scene>
+        <!--Settings Split View Controller-->
+        <scene sceneID="m6H-lb-8ew">
+            <objects>
+                <splitViewController storyboardIdentifier="Settings" allowDoubleColumnStyle="YES" preferredDisplayMode="twoBeside" behavior="displace" presentsWithGesture="NO" primaryBackgroundStyle="sidebar" id="fpR-xj-92S" customClass="SettingsSplitViewController" customModule="MoneyM" customModuleProvider="target" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="sK4-Pq-tw6" kind="relationship" relationship="masterViewController" id="X8V-WW-dwj"/>
+                        <segue destination="pxf-HP-NIN" kind="relationship" relationship="detailViewController" id="nl1-8i-9P5"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R4O-Ox-JAq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="191" y="941"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="secondarySystemBackgroundColor">
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
             <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
